// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkInfoListEditorField function should return <LinkInfoListEditor> 1`] = `
<LinkInfoListEditor
  errorText={null}
  input={
    {
      "onChange": [MockFunction],
    }
  }
  onChange={[MockFunction]}
/>
`;

exports[`LinkInfoListEditorField function should return <LinkInfoListEditor> with error attributes 1`] = `
<LinkInfoListEditor
  error="test"
  errorText="test"
  input={
    {
      "onChange": [MockFunction],
    }
  }
  meta={
    {
      "error": "test",
    }
  }
  onChange={[MockFunction]}
/>
`;
